tests/wpt/tests/third_party/test262/test/language/import/import-defer/errors/get-other-while-dep-evaluating/dep-2_FIXTURE.js
// Copyright (C) 2024 Igalia, S.L. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

import "./dep-3_FIXTURE.js";
import "./main.js";
